FIX header styling - header is now not longer jumping after loading javascript

--- a/resources/scss/ceres/views/PageDesign/_header.scss
+++ b/resources/scss/ceres/views/PageDesign/_header.scss
@@ -93,20 +93,6 @@
 			}
 		}
 	}
-
-
-}
-
-@include media-breakpoint-up(lg) {
-	.extended-container {
-		max-height: 30px;
-	}
-}
-
-@include media-breakpoint-down(md) {
-	.extended-container {
-		max-height: 35px;
-	}
 }
 
 //navigation scss
